force-app/main/default/objects/CC_Seatmap__c/CC_Seatmap__c.object-meta.xml
<CustomObject>
    <label>CC Seatmap</label>
    <nameField>
        <displayFormat>CCSN-{000000}</displayFormat>
        <label>CC Seatmap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Seatmaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>