force-app/main/default/objects/CC_Seatmap__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>