force-app/main/default/objects/CC_Seatmap__c/fields/Log_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_In_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log In Time</label>
    <type>DateTime</type>
</CustomField>