force-app/main/default/objects/CC_Seatmap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Agent_ID__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>