force-app/main/default/objects/CC_Seatmap__c/listViews/test_view.listView-meta.xml
<ListView>
    <fullName>test_view</fullName>
    <columns>Agent_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Agent_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>test_view</label>
</ListView>